# openstack-zuul-jobs

./: .ansible-lint  .gitignore  .gitreview  .zuul.yaml  README.rst  bindep.txt  setup.cfg  test-requirements.txt  tox.ini  zuul.yaml
doc/: requirements.txt
doc/source/: conf.py  index.rst  project-templates.rst
playbooks/ansible-role-functional/: pre.yaml
playbooks/base/: post.yaml
playbooks/build-api-guide/: post.yaml
playbooks/build-api-ref/: post.yaml
playbooks/build-install-guide/: post.yaml
playbooks/build-placement-api-ref/: post.yaml
playbooks/deploy-guide/: post.yaml
playbooks/docs/: post.yaml  rtd-warning-job.yaml
playbooks/fips/: README.rst  enable-fips.yaml
playbooks/golang/: pre.yaml  run.yaml
playbooks/grafana/: main.yaml  post.yaml
playbooks/infra-puppet-apply/: post.yaml  pre.yaml  run.yaml
playbooks/infra-puppet-beaker-rspec/: run.yaml
playbooks/infra-puppet-functional/: pre.yaml
playbooks/javascript/: post-tarball.yaml  post.yaml  pre.yaml
tests/: base.yaml  configure-mirrors.yaml  configure-unbound.yaml  emit-job-header.yaml  ensure-output-dirs.yaml  extra.yaml  fetch-output.yaml  fetch-zuul-cloner.yaml  mirror-info.yaml  multi-node-bridge.yaml  multi-node-firewall-persistence.yaml  multi-node-firewall.yaml  multi-node-hosts-file.yaml  multi-node-known-hosts.yaml  multinode.yaml  prepare-zanata-client.yaml  upload-git-mirror.yaml  use-cached-repos.yaml  validate-host.yaml
zuul.d/: jobs.yaml  nodesets.yaml  project-templates.yaml  project.yaml  secrets.yaml  zuul-legacy-jobs.yaml  zuul-legacy-project-templates.yaml
(+1618 files in other folders)
