[metadata]
name = openstack-zuul-jobs
summary = A set of Ansible playbooks used by OpenStack projects CI system
description_file =
    README.rst
author = OpenStack Infrastructure Team
author_email = openstack-discuss@lists.openstack.org
home_page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
